# projects

3D-graphics/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main01.cpp  main02.cpp  main03.cpp  main04a.cpp  main04b.cpp  main05.cpp  shader.05frag  shader01.frag  shader01.geom  shader01.vert  shader02.frag  shader02.geom  shader02.vert  shader03.frag  shader03.geom  shader03.vert  shader03_Allford_Rory.geom  shader04a.frag  shader04a.geom  shader04a.vert  shader04b.frag  shader04b.vert  shader05.frag  shader05.vert
3D-graphics/cmake/: FindGLEW.cmake
3D-graphics/inc/: objLoader.h
chess/: Bishop.cpp  Bishop.hpp  ChessBoard.cpp  ChessBoard.hpp  ChessMain.cpp  King.cpp  King.hpp  Knight.cpp  Knight.hpp  Pawn.cpp  Pawn.hpp  Piece.cpp  Piece.hpp  Queen.cpp  Queen.hpp  Rook.cpp  Rook.hpp  makefile
enigma-machine/: enigma.cpp  enigma.hpp  errors.h  main.cpp  makefile  plugboard.cpp  plugboard.hpp  reflector.cpp  reflector.hpp  rotor.cpp  rotor.hpp
enigma-machine/reflectors/: test.rf~
flying-quadcopter-group-project/: README-NOTE-FROM-TEREZA.txt
london-tube-in-ASCII/: README-NOTE-FROM-TEREZA  main.cpp  makefile  tube.cpp  tube.h
reflectance-field_individual-project-in-progress/: add-lightsource.cpp  colordialog.cpp  colordialog.h  directions.cpp  directions.h  draggableicons.qrc  dragwidget.h  editing-gui.pro  gamma.cpp  glwidget.cpp  glwidget.h  image-manipulation.cpp  intensities.cpp  lightarea.cpp  lightarea.h  lightmapwidget.cpp  lightmapwidget.h  lights.cpp  lightsource.cpp  lightsource.h  load-directions-and-intensities.cpp  loadPPM.cpp  loadPPM.h  loading-images.cpp  loading-images.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  math-functions.cpp  mythread.cpp  mythread.h  relighting.cpp  voronoi-diagram.cpp  voronoi-diagram.h
robotics-python-group-project/: Makefile  initialise.py  likelihood.py  main.py  movementLibrary.py  particleDataStructures.py  particles.py  pathfollow.py  place_rec_bits.py  route.py  run_copy.py  run_place_main.py  test.py  to_prac.sh
(+6 files in other folders)
